hphp/test/zend/good/ext/mbstring/tests/mb_decode_mimeheader_variation2.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_decode_mimeheader') or die("skip mb_decode_mimeheader() is not available in this build");
?>