hphp/test/zend/bad/ext/mbstring/tests/mb_stripos_variation2.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_stripos') or die("skip mb_stripos() is not available in this build");
?>